# cg_lab_2

./: CMakeLists.txt  main.cpp
